--- a/templates/course.html
+++ b/templates/course.html
@@ -40,6 +40,20 @@
                 </li>
             {% endfor %}
             </ul>
+            <ul>
+            {% for quiz in quizs %}
+                <!-- <div class="contest-title">
+                    <span class="glyphicon_clock glyphicon glyphicon-time"></span>
+                    <a href="{% url 'uoop:test' test.id %}">{{ test.title }}</a>
+                </div> -->
+                <li>
+                    <i class="fa-solid fa-clock" style="/*color: black; background-color: white;*/"></i>
+                    <!-- <i class="fa-regular fa-clock-three"></i> -->
+                    <!-- <i class="fa-solid fa-xmark" style="color: red;"></i> -->
+                    <a href="{% url 'uoop:quiz' quiz.id %}">{{ quiz.title }}</a>
+                </li>
+            {% endfor %}
+        </ul>
         
     </div>
 {% endblock content %}
