Added html pages with contents and edited urls and views

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,8 @@
                     Pomoć
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">O sustavu</a>
-                    <a class="dropdown-item" href="#">Automatizirana provjera</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:8000/osustavu">O sustavu</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:8000/automatiziranaprovjera">Automatizirana provjera</a>
                   </div>
                 </li>
                 <li class="nav-item" style="margin-left: 700px">
