--- a/templates/automatiziranaprovjera.html
+++ b/templates/automatiziranaprovjera.html
@@ -7,11 +7,11 @@
 <p>Rješenja se provjeravaju po principu ispitnih uzoraka. Svaki ispitni uzorak sastoji se od ulazne i izlazne ispitne datoteke. Svakom zadatku pridružen je određeni broj ispitnih uzoraka, uobičajeno je nekoliko uzoraka javno dostupno te su dodatno objašnjeni u tekstu zadatka dok su ostali skriveni.</p>
 <br>
 <h3>Ocjena ispravnosti</h3>
-<p>Nakon što program uspješno završi s izvođenjem dobivena izlazna datoteka se uspoređuje s ispitnom izlaznom datotekom i ukoliko se podaci podudaraju odgovor se ocjenjuje kao ispravan, odnosno ako se ne podudaraju kao neispravan. Isti postupak se ponavlja za svaki od definiranih ispitnih uzoraka za taj zadatak.</p>
+<p>Nakon što program uspješno završi s izvođenjem dobivena izlazna datoteka se uspoređuje s ispitnom izlaznom datotekom i ukoliko se podaci podudaraju, odgovor se ocjenjuje kao ispravan, odnosno ako se ne podudaraju kao neispravan. Isti postupak se ponavlja za svaki od definiranih ispitnih uzoraka za taj zadatak.</p>
 <br>
 <h3>Rezultati</h3>
-<p>Čim završi ispitivanje pojedinog uzorka na ekranu se prikazuje okvir s rezultatima.</p>
-<p>Za javno dostupne ispitne uzorke moguće je klikom na ikone u donjem desnom uglu preuzeti ulaznu i izlaznu ispitnu datoteku dok se kod pojedinih skrivenih uzoraka klikom na ikonu u donjem lijevom uglu se može vidjeti kratak opis što taj uzorak ispituje.</p>
+<p>Čim se završi ispitivanje pojedinog uzorka, na ekranu se prikazuje okvir s rezultatima.</p>
+<p>Za javno dostupne ispitne uzorke moguće je klikom na ikone u donjem desnom uglu preuzeti ulaznu i izlaznu ispitnu datoteku, dok se kod pojedinih skrivenih uzoraka klikom na ikonu u donjem lijevom uglu može vidjeti kratak opis što taj uzorak ispituje.</p>
 <br>
 <ul><h3>Postupak postavljanja rješenja zadatka na server</h3>
 <li>Desni klik na projekt</li>
