--- a/templates/osustavu.html
+++ b/templates/osustavu.html
@@ -4,8 +4,8 @@
 <div style = "width:50%; font-size:large; text-align:justify;display: block;margin-left: auto;margin-right: auto;">
 <br>
 <h1 id="o-sustavu">O sustavu</h1>
-<p>Sustav uoop.riteh.hr namijenjen je provođenju nastave odnosno kao pomoć u savladavanju gradiva iz predmeta Uvod u objektno orijentirano programiranje na Preddiplomskom sveučilišnom studiju računarstva.</p>
-<p>Osnovna funkcija sustava je automatizirana evaluacija programskih rješenja, a dodatno sustav služi i kao centralni repozitorij materijala namjenjenih auditornim i laboratorijskim vježbama.</p>
+<p>Sustav uoop.riteh.hr namijenjen je provođenju nastave, odnosno kao pomoć u savladavanju gradiva iz predmeta Uvod u objektno orijentirano programiranje na Preddiplomskom sveučilišnom studiju računarstva.</p>
+<p>Osnovna funkcija sustava je automatizirana evaluacija programskih rješenja.</p>
 <p>Pristup trenutno imaju samo studenti računarstva Tehničkog fakulteta u Rijeci koji su upisali navedeni predmet.</p>
 <p>Web stranica nastala je kao projekt studenata iz predmeta Programsko inžinjerstvo na Preddiplomskom sveučilišnom studiju računarstva. </p>
 
