--- a/static/my_css.css
+++ b/static/my_css.css
@@ -93,6 +93,7 @@ a {
     white-space: pre-wrap;
     background-color: transparent;
     border-radius: 0;
+    color: black !important;
   }
 
   .test-case {
@@ -190,4 +191,66 @@ a {
     display: inline-block !important;
     font-size: 12px !important;
     border-radius: 4px !important;
+}
+
+/* assignment.html */
+.test-cases-container {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  margin-top: 4% !important;
+  max-width: 90% !important;
+  position: relative !important;
+  padding: 25px 10px !important;
+  border: 1px solid rgb(228, 228, 228) !important;
+}
+
+.valid-invalid-title {
+  position: absolute;
+  right: 2%;
+  top: 2%;
+  font-size: 1.1em;
+}
+
+.test-case-wrapper {
+  margin-right: 1%;
+  margin-bottom: 1%;
+  width: 18%;
+  height: 100%;  
+}
+
+.valid-border {
+  border: 1px solid #b2dba1;
+}
+
+.invalid-border {
+  border: 1px solid #dca7a7;
+}
+
+.test-case-elements-wrapper {
+  padding: 10px; 
+  display: flex; min-height: 170px;
+}
+
+.valid-color {
+  background-image: linear-gradient(to bottom,#dff0d8 0,#c8e5bc 100%);
+  background-repeat: repeat-x;
+}
+.invalid-color {
+  background-image: linear-gradient(to bottom,#f2dede 0,#e7c3c3 100%);
+  background-repeat: repeat-x;
+}
+
+.test-case-title-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.test-case-title {
+  display: flex; 
+  justify-content: space-between;
+  flex: 1;
+}
+
+.test-case-element {
+  flex: 1;
 }
