--- a/templates/test.html
+++ b/templates/test.html
@@ -8,7 +8,7 @@
 </style>
 <div style="width: 80%; margin-left: 10%">
     <h2><b>{{test.title}}</b></h2>
-    <div style="/*position: absolute; right: 200px*/"> <!-- ne radi input ako styleam?????-->
+    <div > <!-- ne radi input ako styleam?????-->
         <input id="input" placeholder="pretrazi" />
     </div>
     <table id="example" class="table /*table-striped*/ /*table-bordered*/" style="width:100%">
@@ -45,7 +45,9 @@
                 </td>
                 <td class="testresults">
                     <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="{{ assignment.percentage }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ assignment.percentage }}%"> <!--iako baca error, svejedno radi kako treba, ako dodas jos '' onda ne prikazuje kako treba-->
+                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="{{ assignment.percentage }}" 
+                        aria-valuemin="0" aria-valuemax="100" style="width: {{ assignment.percentage }}%">
+                         <!--iako baca error, svejedno radi kako treba, ako dodas jos '' onda ne prikazuje kako treba-->
                             {{ assignment.percentage }}%
                         </div>
                     </div>
