--- a/templates/assignment.html
+++ b/templates/assignment.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-    {% if assignment.assignmentTemplate %}
-        <a href="{% url 'uoop:download' assignment.id %}">Download PDF</a>
-    {% endif %}
     <div class="container page-top-offset" style="margin: 0px; /*font-family: 'NotoSerif';*/"> <!-- nije isto ko na prog.riteh.hr s ovim fontom -->
         <p>
             <i class="fa-solid fa-arrow-left"></i>
@@ -136,8 +133,13 @@
                 <button type="submit" class="btn btn-primary">
                     Predaj
                 </button>
+                {% if assignment.assignmentTemplate %}
+                    <a class="btn btn-light" href="{% url 'uoop:download_template' assignment.id %}">Download template</a>
+                {% endif %}
             </form>
         </div>
+
+        {% if assignment.isSolutionVisible %}
         <div class="tab-pane fade" id="rjesenja" role="tabpanel" aria-labelledby="rjesenja-tab">
             <div id="subpub">
                 <h2>
@@ -146,8 +148,11 @@
                 <div class="highlight">
                     <pre>{{ assignment.solution }}</pre>
                 </div>
+                <a class="btn btn-primary" href="{% url 'uoop:download_solution' assignment.id %}">Download solution</a>
             </div>
-    </div>
+        </div>
+        {% endif %}
+    
         <!-- </div>
         </div>
 
